           WARNING: This means any indicator scripts need to be revised. I would wait until I mention that
           tweaking is completed, otherwise you will need additional revising at a later time. Save yourself
           the hassle and wait until it is completed.
           ************************************************************************************************           

           Made changes to all the script formats for indicators. Each indicator now has a PLOT TYPE and COLOR
           parameters. This is due to the PLOT command changes. See docs for details.

           New INDICATOR command script functions. See docs. Reduced command set to manipulate individual index
           positions rather than sending or receiving long strings of indicator values.

20100516:  Add docs/install-macx.html for Mac OS X. Thanks to xley.

20100517:  Updated docs on latest changes. Removed COLOR, REF, COMPARE, ADD, DIV, MULT, SUB classes. These functions
           have been replaced or can be done from within scripts with native script commands.

           Removed the LMS indicator. As I cannot locate any documentation to how this works, so it cannot be
           ported as yet.

           NOTE: still working on updating the included scripts to the new formats.

20100518:  Removed the scale to screen toolbar button. It is now the default.

           Removed the panel hide toolbar button. Useless bloat.

           Completed CUS_examples script conversions.

20100519:  Fixed bug #3001407 (data value display below 0.01 are zero).

20100525:  Added quick lauch script buttons to the script panel. This allows the user to assign scripts to the button
           to run with just one button click. NOTE: only scripts that have been imported into the database
           (the new function) can be assigned to a button. To assign a script to a button, right click on the button
           to display the context menu.


