@@ -23,8 +23,16 @@
 </ul>
 </div>
 </div>
-<br>
-<p></p>
+<h1>Indicator Reference</h1>
+<p> The dialog for adding a new indicator provides access to a list of indicators.
+</p>
+<p>
+See the <a href="toc.html#indicators">Table of Contents</a> which has a separate document for each indicator.
+</p>
+<p>
+Each also shows how to access the indicator via the
+<a href="cus.html">Script API</a>. Note: Choose the "CUS" option in the "New Indicator" dialog to specify a script.
+</p>
 </div>
 </body>
 </html>
