@@ -35,7 +35,7 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
   <li><a href="docs.html">Using the documentation</a></li>
   <li><a href="main.html">Qtstalker GUI</a></li>
   <li><a href="chartobjects.html">Chart Objects</a></li>
-  <li><a href="cus.html">Indicators</a>
+  <li id="indicators"><a href="indicatorreference.html">Indicators</a>
     <ol>
       <li><a href="AD.html">AD</a></li>
       <li><a href="ADX.html">ADX</a></li>
@@ -49,6 +49,7 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
       <li><a href="CCI.html">CCI</a></li>
       <li><a href="CMO.html">CMO</a></li>
       <li><a href="CORREL.html">CORREL</a></li>
+      <li><a href="cus.html">CUS</a> (Script API)</li>
       <li><a href="FI.html">FI</a></li>
       <li><a href="HT.html">HT</a></li>
       <li><a href="LINEARREG.html">LINEARREG</a></li>
@@ -79,8 +80,7 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
       <li><a href="WILLR.html">WILLR</a></li>
     </ol>
   </li>
-  <li>Script API Reference<br>
-  </li>
+  <li id="api"><a href="cus.html">Script API Reference</a></li>
   <ol>
     <li><a href="APIGroups.html">Groups</a><br>
     </li>
@@ -101,6 +101,9 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
   <li><a href="dev.html">Using development versions and contributing</a></li>
   <li><a href="faq.html">Frequently Asked Questions</a></li>
 </ol>
+</div>
+<div id="bottom-spacer">
+<!-- Spacer so that can link directly to certain items in the list above. -->
 </div>
 </body>
 </html>
