@@ -457,10 +457,11 @@
 
 20100519:  Fixed bug #3001407 (data value display below 0.01 are zero).
 
-20100525:  Added quick lauch script buttons to the script panel. This allows the user to assign scripts to the button
+20100525:  Added quick launch script buttons to the script panel. This allows the user to assign scripts to the button
            to run with just one button click. NOTE: only scripts that have been imported into the database
            (the new function) can be assigned to a button. To assign a script to a button, right click on the button
            to display the context menu.
 
-
+20100526:  Updated some old documentation to now refer to the data-loading via the Script API.
+           Enhanced and linked to the Script API overview. Thanks to xley.
 
